@@ -5,6 +5,7 @@
 
 if ( ! `sed 's/e-0\([0-9][0-9]\)/e-\1/g' testPrintBug.out | \
   sed 's/e+0\([0-9][0-9]\)/e+\1/g'  | \
+  sed 's/MEV/GEV/g'  | sed 's/CM/MM/g'  | \
   @DIFF_Q@ - @srcdir@/testPrintBug.output > /dev/null` )
 then
   exit 1;
